client/sass/item-management/_item-interface.scss
.flexible-item-manager {
  position: relative;
  margin-bottom: 182px;
}

.item-manager-header {
  @extend .full-width-breakout;
  background: white;
  margin-top: -24px;
  border-bottom: 1px solid gray;

  // box-shadow: 0 0 20px rgba(0,0,0, .5);

  h1 {
    @extend .container;
    position: relative;
    padding: 15px 0 5px;
    margin: 0;
    text-align: center;
  }

  .deck-return {
    position: absolute;
    left: 24px;
    text-decoration: none;
    font-size: 120%;
  }
}

.item-view-toolbar {
  background: white;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 10px 0;
  .item-filter { width: 50%; max-width: 400px; }

  @media (max-width: 500px) {
    flex-wrap: wrap;
    .item-filter {
      order: 3;
      width: 100%; max-width: none;
      margin-bottom: 14px;
    }
  }
}

.list .list-wrap {
  @extend .full-width-breakout;
  overflow: auto;
  .item-col-headers, .flexible-item-view {
    min-width: 600px;
  }
}

.item-sort {
  .grid & {
    float: right;
    margin-top: 16px;
  }

  .grid-sort {
    display: flex;
    align-items: center;

    .Select { width: 160px; margin-right: 5px; }
    .btn { padding: 5px 7px; margin: 0; }
  }
}
.item-col-headers {
  @include list-row;

  background: $light-button;
  color: black;
  border-bottom: 1px solid gray;
  white-space: nowrap;

  .active { color: $select-col; }

  a { text-decoration: none; }

  // fix chevron spacing issues
  .item-col-header-inner, .fa {
    display: inline-block;
    vertical-align: middle;
    white-space: normal;
    max-width: calc(100% - 15px);
  }
  .fa { margin-left: 5px; }
}

.flexible-item-view {
  clear: both;
  padding-top: 1px;

  .grid & { margin: 0 -15px; }

  .placeholder {
    @extend .spacious;
    opacity: .5;
    text-align: center;
    font-size: 140%;
  }

  a { text-decoration: none; }
}

/*==== Actions Bar ====*/

.actions-bar {
  position: fixed;
  bottom: 60px;
  left: 50%;
  transform: translateX(-50%);

  display: flex;
  background: $header-bg;
  color: white;
  padding: 17px;
  border-radius: 40px;
  font-size: 190%;
  box-shadow: 0 0 20px rgba(0,0,0, .5);

  .popup {
    position: relative;
    transition: transform .15s;

    // triangle
    &.open {
      transform: translateY(-4px);
      &:before {
        content: "";
        position: absolute;
        bottom: 62px;
        left: 30%;
        width: 2px;
        border-top: 15px solid $header-bg;
        border-left: 15px solid transparent;
        border-right: 15px solid transparent;
      }
    }

  }

  .popup-menu {
    position: absolute;
    bottom: 74px;
    left: 50%;
    transform: translateX(-50%);
    padding: 10px 0;
    border-radius: $standard-br;
    font-size: 55%;
    text-align: center;
    background: $header-bg;
    white-space: nowrap;
    box-shadow: 0 0 20px rgba(0,0,0, .5);


    a {
      text-decoration: none;
      display: block;
      margin: 8px 24px;
    }

    .fa { margin-right: 8px; }
  }

  a {
    margin: 0 17px;
    position: relative;
    display: inline-block;
    transition: all .1s;

    &:hover { transform: scale(1.05); }

    // &[disabled] {
    //   pointer-events: none;
    //   opacity: .4;
    // }
  }

  // icon tweaks
  .fa {position: relative;}
  .fa-trash { bottom: 2px; }
  .fa-pencil { font-size: 92%; bottom: 1px; }
}

.deck-picker {
  $deck-picker-height: 45px;

  .Select-control {
    height: $deck-picker-height;

    .Select-value {
      height: $deck-picker-height - 10;
    }
    .Select-value-icon, .Select-value-label {
      height: 100%;
      line-height: $deck-picker-height - 14;
      padding: 0 8px;
    }

    .Select-value-icon, .Select-clear {
      font-size: 150%;
    }

    .Select-placeholder, .Select-input {
      height: $deck-picker-height;
      line-height: $deck-picker-height - 2;
    }
  }
}

.item-editor .modal-window {
  border: 2px solid navy;
  background: $header-bg;
}

